--- a/index.html
+++ b/index.html
@@ -13,8 +13,9 @@
 <body>
     <section class="sec">
         <header>
-            <a href="#"><img src="images\vadapav logo.png" class="logo animate__animated animate__rotateIn"></a>
-            <ul class="animate__animated animate__rollIn">
+            <a href="#"><img src="images/vadapav logo.png" class="logo animate__animated animate__rotateIn"></a>
+            <div class="toggle" onclick="toggleMenu()"></div>
+            <ul class="navigation">
                 <li><a href="index.html">HOME</a></li>
                 <li><a href="#">PRODUCTS</a></li>
                 <li><a href="#">WHAT'S NEW</a></li>
@@ -57,6 +58,12 @@
         function changeBgColor(color){
             const sec = document.querySelector('.sec');
             sec.style.background = color;
+        }
+        function toggleMenu(){
+            const menuToggle = document.querySelector('.toggle');
+            const navigation = document.querySelector('.navigation')
+            menuToggle.classList.toggle('active')
+            navigation.classList.toggle('active')
         }
     </script>
 </body>
